mule-user-guide/v/3.7/configuring-mule-stacktraces.adoc
= 配置Mule Stacktraces
:keywords: anypoint, studio, mule, on premises, on premise, amc, logs, stacktraces, verbose

默认情况下，Mule会从堆栈过滤掉一些内部类的引用，以产生更可读的输出。这种行为可以通过以下三种方式之一来控制：

* 命令行参数

* 在Mule Studio中设置属性

* 使用JMX

== 命令行参数

使用两个命令行属性可以使用`-M-DpropertyName`控制此行为：

*  `mule.stacktrace.full`  - 当出现时，Mule不会过滤堆栈轨迹。只适用于Mule开发者，最终用户可能永远不需要启用它。 （您也可以使用属性`mule.verbose.exceptions=true`，结果相同。）

*  `mule.stacktrace.filter`  - 要从堆栈跟踪中移除的包和/或类的逗号分隔列表，它们通过`string.startsWith()`进行匹配。

== 在Anypoint Studio中设置属性

在Studio中，您可以设置与上面指定的属性相同的属性，以指示Mule提供未过滤的堆栈跟踪或配置要移除的包或类的特定过滤器。要调整这些设置，请打开您的`mule-project.xml`文件并定义环境变量以指定所需的行为。在下面的示例中，`mule.stacktrace.full`属性设置为*true*。

image:Studio-config-stacktrace.png[演播室配置，堆栈跟踪]

== 使用JMX

配置MBean现在公开两个新选项：

*  `FullStackTrace`  - 同上

*  `StackTraceFilter`  - 同上

[NOTE]
====
即使每个应用都有其自己的配置MBean，这些设置也是在应用之间共享的。这意味着在一个应用中修改它会影响其他应用。
====
